--- a/Frontend/web-page-hummingwings/package.json
+++ b/Frontend/web-page-hummingwings/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "mdb-vue-ui-kit": "^4.0.0",
     "vue": "^2.6.14"
   },
   "devDependencies": {
