--- a/Frontend/web-page-hummingwings/package.json
+++ b/Frontend/web-page-hummingwings/package.json
@@ -8,9 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
+    "bootstrap": "^5.3.2",
     "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
     "mdb-vue-ui-kit": "^4.0.0",
+    "swiper": "^10.3.1",
+    "vue": "^3.3.4",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
@@ -21,7 +25,9 @@
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
-    "vue-template-compiler": "^2.6.14"
+    "vue-template-compiler": "^2.6.14",
+    "webpack": "^5.88.2",
+    "webpack-cli": "^5.1.4"
   },
   "eslintConfig": {
     "root": true,
