--- a/Frontend/web-page-hummingwings/package.json
+++ b/Frontend/web-page-hummingwings/package.json
@@ -15,8 +15,9 @@
     "core-js": "^3.8.3",
     "mdb-vue-ui-kit": "^4.0.0",
     "swiper": "^10.3.1",
-    "vue": "^3.3.4",
-    "vue-router": "^4.2.5"
+    "vue": "^3.2.36",
+    "vue-router": "^4.2.5",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
