--- a/Frontend/web-page-hummingwings/package.json
+++ b/Frontend/web-page-hummingwings/package.json
@@ -13,7 +13,9 @@
     "bootstrap": "^5.3.2",
     "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
+    "jquery": "^3.7.1",
     "mdb-vue-ui-kit": "^4.0.0",
+    "popper.js": "^1.16.1",
     "swiper": "^10.3.1",
     "vue": "^3.2.36",
     "vue-router": "^4.2.5",
@@ -22,6 +24,7 @@
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
+    "@types/jquery": "^3.5.24",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
