--- a/Frontend/web-page-hummingwings/package.json
+++ b/Frontend/web-page-hummingwings/package.json
@@ -15,6 +15,7 @@
     "core-js": "^3.8.3",
     "jquery": "^3.7.1",
     "mdb-vue-ui-kit": "^4.0.0",
+    "moment": "^2.29.4",
     "popper.js": "^1.16.1",
     "swiper": "^10.3.1",
     "vue": "^3.2.36",
