--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -1,13 +1,17 @@
 asgiref==3.7.2
+async-timeout==4.0.3
+Cerberus==1.3.2
+Deprecated==1.2.14
 Django==4.2.5
-djangorestframework==3.14.0
-django-extensions==3.0.6
 django-cors-headers==4.3.0
+django-extensions==3.0.6
+djangorestframework==3.14.0
+huey==2.4.3
+packaging==23.2
 psycopg2-binary==2.9.8
+PyJWT==1.7.1
 pytz==2023.3.post1
+redis==4.2.2
 sqlparse==0.4.4
 typing_extensions==4.8.0
-Cerberus==1.3.2
-PyJWT==1.7.1
-huey==2.4.3
-redis==4.2.2
+wrapt==1.15.0
