--- a/Frontend/web-page-hummingwings/package.json
+++ b/Frontend/web-page-hummingwings/package.json
@@ -20,7 +20,9 @@
     "swiper": "^10.3.1",
     "vue": "^3.2.36",
     "vue-router": "^4.2.5",
-    "vuex": "^4.0.2"
+    "vuex": "^4.0.2",
+    "vuex-persist": "^3.1.3",
+    "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
