--- a/Frontend/web-page-hummingwings/package.json
+++ b/Frontend/web-page-hummingwings/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^5.3.2",
     "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
+    "cors": "^2.8.5",
     "jquery": "^3.7.1",
     "mdb-vue-ui-kit": "^4.0.0",
     "moment": "^2.29.4",
