--- a/Frontend/web-page-hummingwings/package.json
+++ b/Frontend/web-page-hummingwings/package.json
@@ -16,12 +16,13 @@
     "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
     "cors": "^2.8.5",
+    "date-fns": "^2.30.0",
     "jquery": "^3.7.1",
     "mdb-vue-ui-kit": "^4.0.0",
     "moment": "^2.29.4",
     "popper.js": "^1.16.1",
     "swiper": "^10.3.1",
-    "vue": "^3.3.7",
+    "vue": "^3.2.26",
     "vue-router": "^4.2.5",
     "vuex": "^4.0.2",
     "vuex-persist": "^3.1.3",
