--- a/Frontend/web-page-hummingwings/package.json
+++ b/Frontend/web-page-hummingwings/package.json
@@ -21,8 +21,9 @@
     "moment": "^2.29.4",
     "popper.js": "^1.16.1",
     "swiper": "^10.3.1",
-    "vue": "^3.3.7",
+    "vue": "^3.2.36",
     "vue-router": "^4.2.5",
+    "vuetify": "^3.3.23",
     "vuex": "^4.0.2",
     "vuex-persist": "^3.1.3",
     "vuex-persistedstate": "^4.1.0"
